# inventree-parametric-bom

docs/: parametric-bom-design.md
src/backend/InvenTree/InvenTree/: settings.py
src/backend/parametric_bom/: README.md  __init__.py  admin.py  api.py  apps.py  bom_expander.py  config_workflow.py  cost_estimator.py  models.py  param_inheritance.py  parametric_bom.py  pyproject.toml  rule_engine.py  serializers.py  template_library.py  urls.py  variant_generator.py  views.py
src/backend/parametric_bom/formula_engine/: __init__.py  errors.py  evaluator.py  functions.py  parser.py
src/backend/parametric_bom/migrations/: 0001_initial.py  0002_partparameterconfig_parameter_type.py  0003_parametricbomitem_mode_bomcandidatepart_and_more.py  __init__.py
src/backend/parametric_bom/templates/parametric_bom/: configurator.html
src/backend/parametric_bom/tests/: test_bom_expander.py  test_config_workflow.py  test_cost_estimator.py  test_formula_engine.py  test_param_inheritance.py  test_rule_engine.py  test_template_library.py  test_variant_generator.py
